# the-explorers-ledger

./: .gitignore  .replit  README.md  atlas_places.csv  atlas_scraper.py  pyproject.toml  replit.md  requirements.txt
artifacts/api-server/src/routes/: places.ts
artifacts/mockup-sandbox/src/: index.css
artifacts/mockup-sandbox/src/.generated/: mockup-components.ts
artifacts/mockup-sandbox/src/components/mockups/atlas-dashboard/: Dashboard.tsx
attached_assets/: Atlas_Obscura_Web_Scraping_Task_1775485342750.docx
