[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
]
